PURPOSE, and without any warranty as to non-infringement of any third
party's rights.  See the License for the specific language governing         
permissions and limitations under the License.

ReservesDirect is located at:
http://www.reservesdirect.org/

************************************************************************
Revision 2.8.0

Changes
--  Added Google Analyitics to code
************************************************************************
Revision 2.7.0

Changes
--  An instuctor can edit a url in an electronic item using the open url interface.
--  PHP upgrade from 5.2.3 to 5.2.10
--  OPUS feed update to release 2.7.0
--  Replacement of zGizmo script with (ALEPH) get_bibrecord script.
--  Retire the reserves fax.
--  Updated front login page by replacing current text with 
    links to each library for more information
    
Revision 2.6.8

Changes
--  Bug fix - only copy selected/checked reserves during a reactivation.    

Revision 2.6.7

Changes
--  Corrections to the note section for add/edit item to work with Chrome and IE browsers.
--  Add more terms to the terms table.

Revision 2.6.6

Changes
--  Fixed the note section for add/edit item to work with Chrome and IE browsers.
    
Revision 2.6.5

Changes
--  Update the copyright queue query to handle null ISBN values. 
--  Restore the pages/times metadata to the course listings page. 
--  Remove carriage return found in the reserve notes in reserveList.php script 
    that create an rss feed for blackboard.

Note: Revisions 2.6.2 thru 2.6.4 were Emory specific migrations that are
    defined in the rd_registrar_scripts repository.
    
Revision 2.6.0

Changes
--  The opus feed file tranfer is validated using a new summary file that 
    contains the row count of the import files, so that project owners can 
    be informed about a failure.

--  Any reserves direct user can access their course when the course is in 