@@ -24,6 +24,7 @@ Revision 2.8.0
 
 Changes
 --  Added Google Analyitics to code
+--  Added ALEPHLink in config file for display on courses page.
 ************************************************************************
 Revision 2.7.0
 
